# cppText-Roguelike

./: .gitignore  CMakeLists.txt  Entity.h  GameManager.cpp  GameManager.h  README.md  build_cmake.bat
include/: Entity.h  GameManager.h
src/: Entity.cpp  GameManager.cpp  main.cpp
